<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodSpots</string>
    <string name="app_logo">Application Logo</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="map">Map</string>
    <string name="course">Course</string>
    <string name="team_member">Team Member</string>

    <!-- Add/Edit Restaurant -->
    <string name="restaurant_name_label">Restaurant Name *</string>
    <string name="address_label">Address *</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="description_label">Description</string>
    <string name="rating_label">Rating</string>
    <string name="tags_label">Tags</string>
    <string name="popular_tags">POPULAR TAGS</string>
    <string name="cancel">Cancel</string>
    <string name="save_restaurant">Save Restaurant</string>
    <string name="hint_restaurant_name">Enter restaurant name</string>
    <string name="hint_address">Start typing address…</string>
    <string name="hint_phone">(555) 123-4567</string>
    <string name="hint_description">Tell us about this restaurant…</string>

    <!-- Restaurant List -->
    <string name="restaurant_name_placeholder">Restaurant Name</string>
    <string name="rating_placeholder">4.5</string>
    <string name="my_restaurants">My Restaurants</string>
    <string name="saved_count">12 saved</string>

    <!-- About Fragment -->
    <string name="version">Version 1.0.0</string>
    <string name="app_description">FoodSpots is a Personal Restaurant Guide that will help users to keep track of the restaurants they visit, rate them and share using email (Facebook or Twitter)</string>
    <string name="course_information">Course Information</string>
    <string name="academic_project">Academic Project</string>
    <string name="course_code_label">Course Code:</string>
    <string name="course_code">COMP3074</string>
    <string name="course_name_label">Course Name:</string>
    <string name="course_name">Mobile App Development</string>
    <string name="development_team">Development Team</string>
    <string name="team_description">Meet the talented students behind this application</string>
    <string name="team_member1_name">Jen Henry</string>
    <string name="team_member1_id">Student ID: 101511301</string>
    <string name="team_member1_role">Lead Developer</string>
    <string name="team_member2_name">Faraz Safdar</string>
    <string name="team_member2_id">Student ID: 100775883</string>
    <string name="team_member2_role">UI/UX Designer &amp; QA Tester</string>
    <string name="team_member3_name">Patrick Solamillo</string>
    <string name="team_member3_id">Student ID: 101464667</string>
    <string name="team_member3_role">Database Engineer</string>
    <string name="team_member4_name">Lloyd Nelson</string>
    <string name="team_member4_id">Student ID: 101539197</string>
    <string name="team_member4_role">Backend Developer</string>

    <!-- Splash Screen -->
    <string name="splash_title">Discover Amazing Food</string>
    <string name="loading">Loading…</string>

    <!-- Restaurant Detail -->
    <string name="restaurant_detail_placeholder">Bella Vista Ristorante</string>
    <string name="rating_reviews_placeholder">5.0 (124 reviews)</string>
    <string name="address_placeholder">123 Culinary Street, Downtown District\nNew York, NY 10001</string>
    <string name="phone_placeholder">(123) 456-7890</string>
    <string name="categories">CATEGORIES</string>
    <string name="personal_notes">PERSONAL NOTES</string>
    <string name="notes_placeholder">An absolutely wonderful dining experience!</string>
    <string name="location_header">LOCATION</string>
    <string name="view_on_map">View on Map</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>

    <!-- Search Activity -->
    <string name="filter_by_cuisine">Filter by cuisine</string>
    <string name="restaurants_found">12 restaurants found</string>
    <string name="hint_search">Search restaurants by name…</string>
</resources>